--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example">
+          package="com.example"
+          android:versionCode="1"
+          android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7"/>
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:label="@string/app_name">
+        <uses-library android:name="com.google.android.maps" />
+        <activity android:name="HomeActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".MyMapActivity" android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
         <service android:name=".MyLocationService"/>
     </application>
-</manifest>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+</manifest> 
