--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,9 +14,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MyMapActivity" android:label="@string/app_name"
+        <activity android:name=".MapActivity" android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar"/>
-        <service android:name=".MyLocationService"/>
+        <service android:name=".LocationService"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
